internal/testdata/mods/error-conditions/invalid-syntax/broken.pp
// This file has intentional syntax errors

// Missing closing brace
dashboard "broken_dashboard" {
  title = "This dashboard is broken"

  // Missing quotes around value
  description = missing quotes here

// Note: File intentionally doesn't close the brace properly
